# transport/http/routes.go
@@ -17,19 +17,26 @@ func (t *Transport) routes() http.Handler {
 		t.authMiddleware(false),
 	}
 
+	ATMMiddlewareGroup := middlewareGroup{
+		t.panicMiddleware,
+		corsMiddleware,
+		t.basicAuthMiddleware(),
+	}
+
 	mux := http.NewServeMux()
 
 	mux.HandleFunc("/", defaultMiddlewareGroup.Apply(t.handlerNotFound))
 	mux.HandleFunc("GET /v1/me/accounts", userMiddlewareGroup.Apply(t.handlerUserAccounts))
 
-	mux.HandleFunc("POST /v1/accounts/open", userMiddlewareGroup.Apply(t.handlerOpenAccount))
-	mux.HandleFunc("POST /v1/accounts/block", userMiddlewareGroup.Apply(t.handlerBlockAccount))
-	mux.HandleFunc("GET /v1/accounts/history", userMiddlewareGroup.Apply(t.handlerAccountHistory))
+	mux.HandleFunc("POST /v1/accounts", userMiddlewareGroup.Apply(t.handlerOpenAccount))
+	mux.HandleFunc("POST /v1/accounts/{accountId}/block", userMiddlewareGroup.Apply(t.handlerBlockAccount))
+	mux.HandleFunc("GET /v1/accounts/{accountId}/history", userMiddlewareGroup.Apply(t.handlerAccountHistory))
 
 	mux.HandleFunc("POST /v1/transactions", userMiddlewareGroup.Apply(t.handlerAccountTransaction))
-	mux.HandleFunc("POST /v1/atm/supplement", defaultMiddlewareGroup.Apply(t.handlerATMSupplement))
-	mux.HandleFunc("POST /v1/atm/withdrawal", defaultMiddlewareGroup.Apply(t.handlerATMWithdrawal))
-	mux.HandleFunc("POST /v1/atm/user/supplement", defaultMiddlewareGroup.Apply(t.handlerATMUserSupplement))
+	mux.HandleFunc("POST /v1/atm/supplement", ATMMiddlewareGroup.Apply(t.handlerATMSupplement))
+	mux.HandleFunc("POST /v1/atm/withdrawal", ATMMiddlewareGroup.Apply(t.handlerATMWithdrawal))
+	mux.HandleFunc("POST /v1/atm/user/supplement", ATMMiddlewareGroup.Apply(t.handlerATMUserSupplement))
+	mux.HandleFunc("POST /v1/atm/user/withdrawal", ATMMiddlewareGroup.Apply(t.handlerATMUserWithdrawal))
 
 	return mux
 }
